Expanding and collapsing menu working, but one bug to be corrected... if the mouse dont hover the nav it won't collapse.

--- a/css/NavigationMenu.css
+++ b/css/NavigationMenu.css
@@ -2,7 +2,14 @@ nav {
   margin: 0px 0px;
   padding: 0px 0px;
   width: 420px;
-  display: none;
+  display: block;
+  transition: left 1s ease-in-out;
+  position: relative;
+  left: -101%;
+}
+
+.aparece {
+  left: 0;
 }
 
 ul {
@@ -17,7 +24,7 @@ li {
   display: block;
   background-color: rgb(28, 136, 98);
   margin-top: 0px;
-  border-bottom: 1px solid rgb(255, 255, 255);
+  border-bottom: 2px solid rgb(255, 255, 255);
 }
 
 a {
