--- a/css/Toggle.css
+++ b/css/Toggle.css
@@ -1,11 +1,13 @@
 #span__toggle{
-    margin: 50px 50px 50px 10px;
+    margin: 50px 50px 0px 30px;
     cursor: pointer;
+    height: fit-content;
+    width: fit-content;
 }
 
 .div__line{
-    background-color: black;
+    background-color: rgb(255, 255, 255);
     height: 5px;
     width: 45px;
-    margin: 5px 0px 5px 20px;
+    margin: 0px 0px 5px 0px;
 }
